Add unit system and operating mode selection to config flow
  Phase 2: Config flow enhancement

  - Add multi-step config flow with unit/mode selection
  - Step 1: Choose unit system (Metric/Imperial) and mode (Boiler/Bill Entry)
  - Step 2a: Boiler config - select switch entity, average consumption
  - Step 2b: Bill entry config - just initial meter reading
  - Store unit_system and operating_mode in hass.data for sensor access
  - Update English translations for new config steps
  - Bump config flow VERSION to 2

--- a/custom_components/gas_meter/translations/en.json
+++ b/custom_components/gas_meter/translations/en.json
@@ -3,11 +3,26 @@
         "step": {
             "user": {
                 "title": "Virtual Gas Meter Setup",
-                "description": "Configure the Virtual Gas Meter integration.",
+                "description": "Choose your unit system and how you want to track gas usage.",
                 "data": {
-                    "boiler_entity": "Select the boiler switch entity (mandatory)",
-                    "boiler_average": "(Optional) Enter average gas consumption per hour (m³)",
-                    "latest_gas_data": "(Optional) Enter initial gas meter state (m³)"
+                    "unit_system": "Unit System",
+                    "operating_mode": "Operating Mode"
+                }
+            },
+            "boiler_config": {
+                "title": "Boiler/Furnace Tracking Setup",
+                "description": "Configure gas tracking based on your boiler or furnace runtime.",
+                "data": {
+                    "boiler_entity": "Boiler/Furnace Switch Entity",
+                    "boiler_average": "Average gas consumption per hour",
+                    "latest_gas_data": "Current gas meter reading (optional)"
+                }
+            },
+            "bill_entry_config": {
+                "title": "Monthly Bill Entry Setup",
+                "description": "Track gas usage by entering your monthly utility bill readings.",
+                "data": {
+                    "latest_gas_data": "Current gas meter reading (optional)"
                 }
             }
         },
